--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -110,7 +110,9 @@
   "profileUpdatedSuccessfully": "प्रोफ़ाइल सफलतापूर्वक अपडेट की गई हे ",
   "pleaseEnterPalmImage": "कृपया हथेली की छवि दर्ज करें",
   "isRequired": "आवश्यक है",
-  "validNameError": "मान्य नाम दर्ज करें (केवल अक्षर अनुमत हैं).",
+  "nameSyntaxError": "मान्य नाम दर्ज करें (केवल अक्षर अनुमत हैं)!",
+  "emailSyntaxError": "मान्य ईमेल दर्ज करें!",
+  "accNotFoundError": "इस ईमेल से कोई खाता नहीं मिला। कृपया पुनः प्रयास करें या साइन अप करें!",
   "birthPlace": "जन्म स्थान",
   "enterYourFullName": "अपना पूरा नाम भरें",
   "enterYourBirthPlace": "अपना जन्म स्थान दर्ज करें",
@@ -133,7 +135,7 @@
   "inSights": "इनसाइट्स",
   "logOutConfirmation": "क्या आप लॉग आउट करना चाहते हैं?",
   "yes": "हाँ",
-  "noMantraToday": "आज के लिए कोई मंत्र निर्धारित नहीं है",
+  "noMantraToday": "आज के लिए कोई मंत्र निर्धारित नहीं है।",
   "date": "तारीख",
   "selectDate": "तारीख़ चुनें",
   "career": "भविष्य ",
@@ -197,8 +199,8 @@
   "learningOutlook": "सीखने का दृष्टिकोण",
   "spiritualEnergy": "आध्यात्मिक ऊर्जा",
   "planetarySnapshot": "ग्रहों का स्नैपशॉट",
-  "otpSentSuccessfully": "OTP सफलतापूर्वक भेजा गया",
-  "otpReSentSuccessfully": "OTP सफलतापूर्वक पुनः भेजा गया",
+  "otpSentSuccessfully": "OTP सफलतापूर्वक भेजा गया हे",
+  "otpReSentSuccessfully": "OTP सफलतापूर्वक पुनः भेजा गया हे",
   "otpVerifiedSuccessfully": "OTP सफलतापूर्वक सत्यापित",
   "passwordResetSuccessfully": "पासवर्ड सफलतापूर्वक रीसेट हो गया हे",
   "dailyReminderCreated": "दैनिक अनुस्मारक बनाया गया है",
@@ -210,8 +212,7 @@
   "confirmPasswordForValidation": "पासवर्ड की पुष्टि",
   "passwordSyntaxError": "पासवर्ड कम से कम 8 अक्षरों का होना चाहिए, जिसमें एक बड़ा अक्षर, एक संख्या और एक विशेष वर्ण शामिल होना चाहिए!",
   "expireToken": "टोकन की समय सीमा समाप्त हो गई है",
-  "noMantraHistory": "कोई मंत्र इतिहास उपलब्ध नहीं है."
-
-
-
+  "noMantraHistory": "कोई मंत्र इतिहास उपलब्ध नहीं है।",
+  "alreadySubscribed": "आपने पहले ही इस योजना की सदस्यता ले ली है।",
+  "palmBirthChartAlignment": "हथेली + जन्म कुंडली संरेखण"
 }
