--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -110,7 +110,9 @@
   "profileUpdatedSuccessfully": "சுயவிவரம் வெற்றிகரமாகப் புதுப்பிக்கப்பட்டது.",
   "pleaseEnterPalmImage": "உள்ளங்கைப் படத்தை உள்ளிடவும்.",
   "isRequired": "அவசியம்",
-  "validNameError": "செல்லுபடியாகும் பெயரை உள்ளிடவும் (எழுத்துக்கள் மட்டுமே அனுமதிக்கப்படும்).",
+  "nameSyntaxError": "செல்லுபடியாகும் பெயரை உள்ளிடவும் (எழுத்துக்கள் மட்டுமே அனுமதிக்கப்படும்)!",
+  "emailSyntaxError": "செல்லுபடியாகும் மின்னஞ்சலை உள்ளிடவும்!",
+  "accNotFoundError": "இந்த மின்னஞ்சலில் எந்தக் கணக்கும் இல்லை. மீண்டும் முயற்சிக்கவும் அல்லது பதிவு செய்யவும்!",
   "birthPlace": "பிறந்த இடம்",
   "enterYourFullName": "உங்கள் முழுப் பெயரை உள்ளிடவும்",
   "enterYourBirthPlace": "உங்கள் பிறந்த இடத்தை உள்ளிடவும்",
@@ -210,6 +212,8 @@
   "confirmPasswordForValidation": "கடவுச்சொல்லை உறுதிப்படுத்தவும்",
   "passwordSyntaxError": "கடவுச்சொல்லில் குறைந்தது 8 எழுத்துகள் இருக்க வேண்டும், அதில் ஒரு பெரிய எழுத்து, ஒரு எண் மற்றும் ஒரு சிறப்பு எழுத்து ஆகியவை அடங்கும்!",
   "expireToken": "டோக்கன் காலாவதியாகிவிட்டது.",
-  "noMantraHistory": "மந்திர வரலாறு எதுவும் கிடைக்கவில்லை."
+  "noMantraHistory": "மந்திர வரலாறு எதுவும் கிடைக்கவில்லை.",
+  "alreadySubscribed": "நீங்கள் ஏற்கனவே இந்தத் திட்டத்தில் சேர்ந்துள்ளீர்கள்.",
+  "palmBirthChartAlignment": "உள்ளங்கை + பிறப்பு விளக்கப்பட சீரமைப்பு"
 
 }
