--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -115,6 +115,8 @@
   "accNotFoundError": "இந்த மின்னஞ்சலில் எந்தக் கணக்கும் இல்லை. மீண்டும் முயற்சிக்கவும் அல்லது பதிவு செய்யவும்!",
   "birthPlace": "பிறந்த இடம்",
   "enterYourFullName": "உங்கள் முழுப் பெயரை உள்ளிடவும்",
+  "enterYourBirthDate": "உங்கள் பிறந்த தேதியை உள்ளிடவும்",
+  "enterYourBirthTime": "உங்கள் பிறந்த நேரத்தை உள்ளிடவும்",
   "enterYourBirthPlace": "உங்கள் பிறந்த இடத்தை உள்ளிடவும்",
   "enterYourCurrentLocation": "உங்கள் தற்போதைய இருப்பிடத்தை உள்ளிடவும்",
   "repeatFrequency": "மீண்டும் நிகழும் அதிர்வெண்",
@@ -214,6 +216,16 @@
   "expireToken": "டோக்கன் காலாவதியாகிவிட்டது.",
   "noMantraHistory": "மந்திர வரலாறு எதுவும் கிடைக்கவில்லை.",
   "alreadySubscribed": "நீங்கள் ஏற்கனவே இந்தத் திட்டத்தில் சேர்ந்துள்ளீர்கள்.",
-  "palmBirthChartAlignment": "உள்ளங்கை + பிறப்பு விளக்கப்பட சீரமைப்பு"
-
+  "palmBirthChartAlignment": "உள்ளங்கை + பிறப்பு விளக்கப்பட சீரமைப்பு",
+  "agreementDetails": "இந்த ஆப் ஆன்மீக வழிகாட்டுதலை வழங்குகிறது மற்றும் தொழில்முறை ஆலோசனைக்கு மாற்றாக இல்லை. தொடர்வதன் மூலம், நீங்கள் பயன்பாட்டு விதிமுறைகள் மற்றும் தனியுரிமைக் கொள்கையை ஏற்றுக்கொள்கிறீர்கள்.",
+  "understandAndAgree": "நான் புரிந்துகொண்டு ஒப்புக்கொள்கிறேன்.",
+  "continueText": "தொடரவும்",
+  "next": "அடுத்து",
+  "mantraSectionTutorial": "தினசரி மந்திரங்களைக் கேட்டு உங்கள் மனதை அமைதியாக வைத்திருங்கள். முழு ஆடியோ திரையைத் திறக்க மந்திரத்தின் உரை அல்லது ஆடியோ ஐகானைத் தட்டவும்.",
+  "palmSectionTutorial": "உங்கள் இரு உள்ளங்கைகளையும் பிடித்து உங்கள் வாழ்க்கை சமநிலையைப் பற்றி சிந்தியுங்கள் - உங்கள் கோடுகளைக் கவனியுங்கள், நினைவாற்றலில் கவனம் செலுத்துங்கள், உங்களை நன்றாகப் புரிந்து கொள்ளுங்கள்.",
+  "premiumDialogTutorial": "இது பிரீமியம் அணுகல் உரையாடல். மவுண்ட் பகுப்பாய்வு மற்றும் பிறப்பு விளக்கப்பட பொருத்தம் போன்ற மேம்பட்ட அம்சங்களைத் திறக்க மேம்படுத்தவும்.",
+  "remedySectionTutorial": "கிரகங்கள், தசா மற்றும் அவற்றின் சக்திகள் உங்கள் உள்ளங்கையை எவ்வாறு பாதிக்கின்றன என்பதை அறிந்து கொள்ளுங்கள். அவற்றின் விளைவுகள் மற்றும் தீர்வுகளைக் கண்டறியவும் - ஆழமான நுண்ணறிவுகளுக்கு பிரீமியம் அணுகலைத் திறக்கவும்.",
+  "profileSectionTutorial": "உங்கள் தனிப்பட்ட விவரங்களைச் சேர்த்து, பயன்பாட்டில் உங்கள் கணக்கைப் பாதுகாக்கவும்.",
+  "appInfoSectionTutorial": "பயன்பாட்டைப் பற்றிய அனைத்து தகவல்களும் பயன்பாட்டுத் தகவல் திரையில் கிடைக்கின்றன. மேலும் விவரங்களை ஆராய தட்டவும்.",
+  "skip": "தவிர்"
 }
