--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -160,7 +160,7 @@
   "premiumMessageMatchWithRemedies": "The \"Remedies\" feature is available exclusively for Premium Plan (Tier 2) users.",
   "premiumSloganMessageMountAnalysis": "Unlock personalized insights into your palm’s mounts and their influence on your life path.",
   "premiumSloganMessageMatchWithBirthChart": "The \"Match with Birth Chart\" feature is available exclusively for Premium Plan (Tier 2) users.",
-  "premiumSloganMessageRemedies": "The \"Remedies\" feature is available exclusively for Premium Plan (Tier 2) users.",
+  "premiumSloganMessageRemedies": "Unlock personalized insights into your palm’s mounts and their influence on your life path.",
   "premiumMantraHistory": "Unlock mantra history and track your spiritual journey",
   "upgradeToTier1": "Upgrade to Tier 1",
   "signUp": "Sign Up",
