--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -154,7 +154,7 @@
   "premiumMessageMatchWithRemedies": "\"उपचार\" सुविधा विशेष रूप से प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
   "premiumSloganMessageMountAnalysis": "अपनी हथेली के पर्वतों और अपने जीवन पथ पर उनके प्रभाव के बारे में व्यक्तिगत जानकारी प्राप्त करें।",
   "premiumSloganMessageMatchWithBirthChart": "\"जन्म कुंडली से मिलान\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
-  "premiumSloganMessageRemedies": "\"रिमेडिज\" सुविधा केवल प्रीमियम प्लान (टियर 2) उपयोगकर्ताओं के लिए उपलब्ध है।",
+  "premiumSloganMessageRemedies": "अपनी हथेली के पर्वतों और आपके जीवन पथ पर उनके प्रभाव के बारे में पर्सनलाइज़्ड जानकारी पाएं।",
   "premiumMantraHistory": "मंत्रों का इतिहास जानें और अपनी आध्यात्मिक यात्रा को ट्रैक करें",
   "upgradeToTier1": "टियर 1 में अपग्रेड करें",
   "signUp": "साइन अप करें",
