--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -215,7 +215,8 @@
   "passwordSyntaxError": "पासवर्ड कम से कम 8 अक्षरों का होना चाहिए, जिसमें एक बड़ा अक्षर, एक संख्या और एक विशेष वर्ण शामिल होना चाहिए!",
   "expireToken": "टोकन की समय सीमा समाप्त हो गई है",
   "noMantraHistory": "कोई मंत्र इतिहास उपलब्ध नहीं है।",
-  "alreadySubscribed": "आपने पहले ही इस योजना की सदस्यता ले ली है।",
+  "alreadySubscribedTier1": "आपने पहले ही टियर 1 को सब्सक्राइब कर लिया है।",
+  "alreadySubscribedTier2": "आपने पहले ही टियर 2 को सब्सक्राइब कर लिया है।",
   "palmBirthChartAlignment": "हथेली + जन्म कुंडली संरेखण",
   "agreementDetails": "यह ऐप स्पिरिचुअल गाइडेंस देता है और प्रोफेशनल सलाह का सब्स्टीट्यूट नहीं है। जारी रखकर, आप इस्तेमाल की शर्तें और प्राइवेसी पॉलिसी स्वीकार करते हैं।",
   "understandAndAgree": "मैं समझता हूं और सहमत हूं।",
@@ -227,6 +228,8 @@
   "remedySectionTutorial": "जानें कि ग्रह, दशा और उनकी एनर्जी आपकी हथेली पर कैसे असर डालती हैं। उनके असर और उपाय जानें — ज़्यादा जानकारी के लिए प्रीमियम एक्सेस अनलॉक करें।",
   "profileSectionTutorial": "अपनी पर्सनल डिटेल्स जोड़ें और ऐप में अपना अकाउंट सिक्योर करें।",
   "appInfoSectionTutorial": "ऐप के बारे में सारी जानकारी ऐप इन्फो स्क्रीन पर उपलब्ध है। ज़्यादा जानकारी के लिए टैप करें।",
-  "skip": "छोड़िए"
+  "skip": "छोड़िए",
+  "tier1PurchasedSuccessfully": "टियर 1 सफलतापूर्वक खरीदा गया है।",
+  "tier2PurchasedSuccessfully": "टियर 2 सफलतापूर्वक खरीदा गया है।"
 
 }
