--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -215,7 +215,8 @@
   "passwordSyntaxError": "கடவுச்சொல்லில் குறைந்தது 8 எழுத்துகள் இருக்க வேண்டும், அதில் ஒரு பெரிய எழுத்து, ஒரு எண் மற்றும் ஒரு சிறப்பு எழுத்து ஆகியவை அடங்கும்!",
   "expireToken": "டோக்கன் காலாவதியாகிவிட்டது.",
   "noMantraHistory": "மந்திர வரலாறு எதுவும் கிடைக்கவில்லை.",
-  "alreadySubscribed": "நீங்கள் ஏற்கனவே இந்தத் திட்டத்தில் சேர்ந்துள்ளீர்கள்.",
+  "alreadySubscribedTier1": "நீங்கள் ஏற்கனவே அடுக்கு 1 க்கு குழுசேர்ந்துள்ளீர்கள்.",
+  "alreadySubscribedTier2": "நீங்கள் ஏற்கனவே அடுக்கு 2 க்கு குழுசேர்ந்துள்ளீர்கள்.",
   "palmBirthChartAlignment": "உள்ளங்கை + பிறப்பு விளக்கப்பட சீரமைப்பு",
   "agreementDetails": "இந்த ஆப் ஆன்மீக வழிகாட்டுதலை வழங்குகிறது மற்றும் தொழில்முறை ஆலோசனைக்கு மாற்றாக இல்லை. தொடர்வதன் மூலம், நீங்கள் பயன்பாட்டு விதிமுறைகள் மற்றும் தனியுரிமைக் கொள்கையை ஏற்றுக்கொள்கிறீர்கள்.",
   "understandAndAgree": "நான் புரிந்துகொண்டு ஒப்புக்கொள்கிறேன்.",
@@ -227,5 +228,7 @@
   "remedySectionTutorial": "கிரகங்கள், தசா மற்றும் அவற்றின் சக்திகள் உங்கள் உள்ளங்கையை எவ்வாறு பாதிக்கின்றன என்பதை அறிந்து கொள்ளுங்கள். அவற்றின் விளைவுகள் மற்றும் தீர்வுகளைக் கண்டறியவும் - ஆழமான நுண்ணறிவுகளுக்கு பிரீமியம் அணுகலைத் திறக்கவும்.",
   "profileSectionTutorial": "உங்கள் தனிப்பட்ட விவரங்களைச் சேர்த்து, பயன்பாட்டில் உங்கள் கணக்கைப் பாதுகாக்கவும்.",
   "appInfoSectionTutorial": "பயன்பாட்டைப் பற்றிய அனைத்து தகவல்களும் பயன்பாட்டுத் தகவல் திரையில் கிடைக்கின்றன. மேலும் விவரங்களை ஆராய தட்டவும்.",
-  "skip": "தவிர்"
+  "skip": "தவிர்",
+  "tier1PurchasedSuccessfully": "टஅடுக்கு 1 வெற்றிகரமாக வாங்கப்பட்டது.",
+  "tier2PurchasedSuccessfully": "அடுக்கு 2 வெற்றிகரமாக வாங்கப்பட்டது."
 }
