--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -136,6 +136,7 @@
   "nakshatra": "நட்சத்திரம்",
   "inSights": "நுண்ணறிவுகள்",
   "logOutConfirmation": "நீங்கள் நிச்சயமாக வெளியேற விரும்புகிறீர்களா?",
+  "deleteConfirmation": "உங்கள் கணக்கை நீக்க விரும்புகிறீர்களா?",
   "yes": "ஆம்",
   "noMantraToday": "இன்று எந்த மந்திரமும் திட்டமிடப்படவில்லை.",
   "date": "தேதி",
@@ -195,6 +196,7 @@
   "registeredSuccessfully": "வெற்றிகரமாகப் பதிவுசெய்யப்பட்டது",
   "loginSuccessfully": "வெற்றிகரமாக உள்நுழைந்தேன்",
   "loggedOutSuccessfully": "வெற்றிகரமாக வெளியேறிவிட்டீர்கள்",
+  "accountDeleteSuccessfully": "கணக்கு வெற்றிகரமாக நீக்கப்பட்டது.",
   "familyEnergy": "குடும்ப சக்தி",
   "powerPeriods": "சக்தி காலங்கள்",
   "emotionalEnergy": "உணர்ச்சி ஆற்றல்",
@@ -230,5 +232,7 @@
   "appInfoSectionTutorial": "பயன்பாட்டைப் பற்றிய அனைத்து தகவல்களும் பயன்பாட்டுத் தகவல் திரையில் கிடைக்கின்றன. மேலும் விவரங்களை ஆராய தட்டவும்.",
   "skip": "தவிர்",
   "tier1PurchasedSuccessfully": "टஅடுக்கு 1 வெற்றிகரமாக வாங்கப்பட்டது.",
-  "tier2PurchasedSuccessfully": "அடுக்கு 2 வெற்றிகரமாக வாங்கப்பட்டது."
+  "tier2PurchasedSuccessfully": "அடுக்கு 2 வெற்றிகரமாக வாங்கப்பட்டது.",
+  "deleteAccount": "காதா ஹட்டா தீஜியே"
+
 }
