--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -136,6 +136,7 @@
   "nakshatra": "Nakshatra",
   "inSights": "Insights",
   "logOutConfirmation": "Are you sure you want to Log Out?",
+  "deleteConfirmation": "Are you sure you want to Delete Account?",
   "yes": "Yes",
   "noMantraToday": "No mantra scheduled for today",
   "date": "Date",
@@ -201,6 +202,7 @@
   "registeredSuccessfully": "Registered successfully",
   "loginSuccessfully": "Login successfully",
   "loggedOutSuccessfully": "Logged out successfully",
+  "accountDeleteSuccessfully": "Account deleted successfully.",
   "otpSentSuccessfully": "OTP sent successfully",
   "otpReSentSuccessfully": "OTP resent successfully",
   "otpVerifiedSuccessfully": "OTP verified successfully",
@@ -230,5 +232,7 @@
   "appInfoSectionTutorial": "All information about the app is available on the App Info screen. Tap to explore more details.",
   "skip": "Skip",
   "tier1PurchasedSuccessfully": "Tier 1 Purchased Successfully",
-  "tier2PurchasedSuccessfully": "Tier 2 Purchased Successfully"
+  "tier2PurchasedSuccessfully": "Tier 2 Purchased Successfully",
+  "deleteAccount": "Delete Account"
+
 }
